# dilqr

./: .gitignore  README.md  dilqr.opam
examples/: aircraft.ml  aircraft2.ml  dune  gs.ml  pendulum.ml  test.ml  tests.ml
src/: default.ml  default.mli  dune  linesearch.ml  linesearch.mli  lqr.ml  lqr.mli  misc.ml  misc.mli  regularisation.ml  regularisation.mli
