opam-version: "2.0"
authors: [ "Ta-Chu Calvin Kao" ]
license: "MIT"
homepage: "https://github.com/tachukao/dilqr"
dev-repo: "git+https://github.com/tachukao/dilqr.git"
bug-reports: "https://github.com/tachukao/dilqr/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {>= "2.0.0"}
  "owl" {>= "0.7.0"}
]
synopsis: "differentiable iLQR"
